--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/white.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -270,7 +270,98 @@
 							(|\nabla_x R_i^k + \nabla_y R_i^k|)$</p>
 							<img class="fragment" width=70% data-src="fig/mega4.png">
 					</section>
+					<section>
+						<h3 style="text-transform: none"> A Similar Work </h3>
+						<small>[<a href="http://openaccess.thecvf.com/content_cvpr_2018/papers/Xian_Monocular_Relative_Depth_CVPR_2018_paper.pdf">4</a>] Monocular Relative Depth Perception with Web Stereo Data Supervision, CVPR 2018								</small>
+						<ul>
+							<li class="fragment">Collect stereo web images for depth estimation</li>
+							<li class="fragment">Compute optical flow to infer disparity (depth)</li>
+							<li class="fragment">Still use ordinal loss but sample point pairs online</li>
+							<span class="fragment">(Absolute depth is unavailable?)</span>
+						</ul>
+					</section>
 				</section>
+				<section>
+					<section>
+						<h3 style="text-transform: none"> Learning Depth Estimation from Image Alignment Loss </h3>
+						<small>[<a href="https://github.com/Yevkuzn/semodepth">4</a>] Semi-Supervised Deep Learning for Monocular Depth Map Prediction, CVPR 2018</small>
+						<div class="left" style="float: left; width: 50%">
+							<img width=100% data-src="fig/sd1.png">
+						</div>
+						<div class="right" style="float: right; width: 50%; position: relative; top: 50px; ">
+							<ul>
+								<li class="fragment">Supervised: sparse depth supervision</li>
+								<li class="fragment">Unsupervised: image alignment</li>
+							</ul>
+						</div>
+					</section>
+					<section>
+						<h3 style="text-transform: none"> Similar Ideas using Monocular Videos </h3>
+						<img width=100% data-src="fig/video1.png">
+					</section>
+					<section data-transition="none">
+						<h3 style="text-transform: none"> Similar Ideas using Monocular Videos </h3>
+						<p style="text-align: left"><small>[<a href="https://people.eecs.berkeley.edu/~tinghuiz/projects/SfMLearner/">5</a>] Unsupervised Learning of Depth and Ego-Motion from Video, CVPR 2017</small></p>
+						<p style="text-align: left"><small>[<a href="https://github.com/yzcjtr/GeoNet">6</a>]GeoNet: Unsupervised Learning of Dense Depth, Optical Flow and Camera Pose, CVPR 2018</small></p>
+						<p style="text-align: left"><small>[<a href="https://github.com/MightyChaos/LKVOLearner">7</a>]Learning Depth from Monocular Videos using Direct Methods, CVPR 2018</small></p>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h4 style="text-transform: none"> <a href="https://github.com/google/aperture_supervision">Aperture Supervision for Monocular Depth Estimation</a> </h4>
+						<p>By Srinivasan et al, CVPR 2018</p>
+						<p> Image 
+							<span class="fragment"> &#8658 Depth</span> 
+							<span class="fragment">&#8658 Rendering function </span>
+							<span class="fragment">&#8658 Shallow DoF </span></p>
+						<p class="fragment">Scenarios are limited, mainly flowers</p>
+						<img width="100%" data-src="fig/aperture.png">
+					</section>
+				</section>
+				<section>
+					<section>
+						<h3 style="text-transform: none"> Additional Works with New Training Strategies</h3>
+						<p><small>[<a href="https://arxiv.org/abs/1805.04409">8</a>]PAD-Net: Multi-Tasks Guided Prediction-and-Distillation Network
+							for Simultaneous Depth Estimation and Scene Parsing, CVPR 18</small></p>
+						<img width="100%" data-src="fig/mt.png">
+					</section>
+					<section data-transition="concave">
+						<h3 style="text-transform: none"> Additional Works with New Training Strategies</h3>
+						<p><small>[<a href="https://arxiv.org/abs/1803.01599">9</a>]AdaDepth: Unsupervised Content Congruent Adaptation for Depth Estimatio, CVPR 18</small></p>
+						<img width="90%" data-src="fig/ada1.png">
+					</section>
+					<section data-transition="concave">
+						<h3 style="text-transform: none"> Additional Works with New Training Strategies</h3>
+						<p><small>[<a href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/4075.pdf">10</a>]Salience Guided Depth Calibration for Perceptually Optimized Compressive
+							Light Field 3D Display, CVPR 18</small></p>
+						<img width="90%" data-src="fig/sg.png">
+					</section>
+				</section>
+				<section>
+					<section>
+						<h3 style="text-transform: none">Future Directions</h3>
+						<ul>
+							<li class="fragment">Borrow idea from saliency for depth estimation</li>
+							<li class="fragment">Depth completion/refinement from sparse input</li>
+							<li class="fragment">Application based on RGB-D data</li>
+						</ul>
+					</section>
+					<section>
+						<h3 style="text-transform: none"> Application on RGB-D</h3>
+						
+						<ul>
+								<span> <font size="5">2D &#8658 2.5D &#8658 3D</font></span>
+							<li class="fragment"><font size="5">Using depth as additional low-level cues</font></li>
+							<li class="fragment"><font size="5">Solve 2D by 3D construction for better scene understanding</font></li>
+							<span class="fragment"><font size="4"><a href="http://web.stanford.edu/class/cs231a/"> CS231A: Computer Vision, From 3D Reconstruction to Recognition</a></font></span>
+						</ul>
+						<img width="70%" data-src="fig/app1.png">
+
+
+					</section>
+				</section>
+
+
 
 
 				<section>
