add theme selector in initial page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 					<br><br>
 					<p>Lijun Wang</p>
 					<p>July 1, 2018</p>
+					<br>
+					<p>	<small>
+						<a href="#" onclick="document.getElementById('theme').setAttribute('href','css/theme/black.css'); return false;">Black</a> -
+						<a href="#" onclick="document.getElementById('theme').setAttribute('href','css/theme/white.css'); return false;">White</a>
+					</small></p>
+
 				</section>
 				<section data-transition="zoom">
 					<h2 style="text-transform: none">Topics</h2>
